--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Mariia Novichenko</a>
+        <a class="navbar-brand" href="/">Mariia Novichenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,15 +33,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="/"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info.html">About me</a>
+              <a class="nav-link" href="/info.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info.html#contact">Contact me</a>
+              <a class="nav-link" href="/info.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -56,8 +56,8 @@
     <br />
 
     <div class="buttons">
-      <a href="info.html#contact" class="contact-me">Contact Me</a>
-      <a href="info.html" class="about-me">About Me</a>
+      <a href="/info.html#contact" class="contact-me">Contact Me</a>
+      <a href="/info.html" class="about-me">About Me</a>
     </div>
 
     <div class="container card-app">
@@ -78,7 +78,7 @@
                 omnis quam vel eos eveniet alias temporibus deserunt veritatis
                 minima fugiat explicabo eum dolore.
               </p>
-              <a href="index.html" class="btn btn-pink">Launch Yoga App</a>
+              <a href="/" class="btn btn-pink">Launch Yoga App</a>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
                 omnis quam vel eos eveniet alias temporibus deserunt veritatis
                 minima fugiat explicabo eum dolore.
               </p>
-              <a href="index.html" class="btn btn-pink">Launch Weather App</a>
+              <a href="/" class="btn btn-pink">Launch Weather App</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
                 omnis quam vel eos eveniet alias temporibus deserunt veritatis
                 minima fugiat explicabo eum dolore.
               </p>
-              <a href="index.html" class="btn btn-pink">Launch Yogurt App</a>
+              <a href="/" class="btn btn-pink">Launch Yogurt App</a>
             </div>
           </div>
         </div>
