--- a/info.html
+++ b/info.html
@@ -14,12 +14,12 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Mariia Novichenko</a>
+        <a class="navbar-brand" href="/">Mariia Novichenko</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -33,15 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info.html">About me</a>
+              <a class="nav-link" href="/info.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="info.html#contact">Contact me</a>
+              <a class="nav-link" href="/info.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
