--- a/info.html
+++ b/info.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>She Codes</title>
+    <meta
+      name="description"
+      content="About Mariia Novichenko, a front-end developer based in Europe." />
+    <title>About me | Mariia Novichenko</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
