Adapted main page for mobile devices

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       👋Hello! I am
       <div class="big-font">Mariia Novichenko</div>
     </h1>
-    <div class="description">Front-end developer, based in Germany</div>
+    <div class="description">Front-end developer, based in Europe</div>
     <br />
 
     <div class="buttons">
@@ -66,7 +66,7 @@
         <div class="col-sm-6">
           <img
             src="https://31ukq.codesandbox.io/images/yoga.png"
-            class="img-fluid rounded"
+            class="index-img img-fluid rounded"
             alt="yoga" />
         </div>
         <div class="col-sm-6">
@@ -105,7 +105,7 @@
         <div class="col-sm-6">
           <img
             src="https://31ukq.codesandbox.io/images/weather.png"
-            class="img-fluid rounded"
+            class="index-img img-fluid rounded"
             alt="weather" />
         </div>
       </div>
@@ -116,7 +116,7 @@
         <div class="col-sm-6">
           <img
             src="https://31ukq.codesandbox.io/images/yogurt.png"
-            class="img-fluid rounded"
+            class="index-img img-fluid rounded"
             alt="yogurt" />
         </div>
         <div class="col-sm-6">
