Adapted info page for mobile devices

--- a/info.html
+++ b/info.html
@@ -64,21 +64,21 @@
         <div class="col-sm-4">
           <img
             src="https://31ukq.codesandbox.io/images/yoga.png"
-            class="img-fluid rounded"
+            class="info-img img-fluid rounded"
             alt="yoga" />
         </div>
 
         <div class="col-sm-4">
           <img
             src="https://31ukq.codesandbox.io/images/weather.png"
-            class="img-fluid rounded"
+            class="info-img img-fluid rounded"
             alt="weather" />
         </div>
 
         <div class="col-sm-4">
           <img
             src="https://31ukq.codesandbox.io/images/yogurt.png"
-            class="img-fluid rounded"
+            class="info-img img-fluid rounded"
             alt="yogurt" />
         </div>
       </div>
